# knowrob_tutorials

./: README.md
knowrob_tutorials/knowrob_basics_tutorial/: CMakeLists.txt  package.xml
knowrob_tutorials/knowrob_basics_tutorial/owl/: ccrl2_map_objects.owl  coffeecup-solution.owl  coffeecup.owl
knowrob_tutorials/knowrob_basics_tutorial/prolog/: init.pl
knowrob_tutorials/knowrob_perception_tutorial/: CMakeLists.txt  CMakeLists.txt.bak  build.gradle  build.gradle.bak  package.xml  settings.gradle
knowrob_tutorials/knowrob_perception_tutorial/gradle.bak/wrapper/: gradle-wrapper.properties
knowrob_tutorials/knowrob_perception_tutorial/knowrob_perception_tutorial/: build.gradle  build.gradle.bak
knowrob_tutorials/knowrob_perception_tutorial/knowrob_perception_tutorial/src/main/java/org/knowrob/tutorials/: DummyClient.java  DummyPublisher.java  DummyService.java  DummySubscriber.java  ObjectDetection.java
knowrob_tutorials/knowrob_perception_tutorial/knowrob_tutorial_msgs/: build.gradle
knowrob_tutorials/knowrob_perception_tutorial/owl/: knowrob_perception_tutorial.owl
knowrob_tutorials/knowrob_perception_tutorial/prolog/: init.pl  perception_tutorial.pl
knowrob_tutorials/knowrob_perception_tutorial/scripts/: dummy_client  dummy_publisher  dummy_service  dummy_subscriber
knowrob_tutorials/knowrob_tutorial_msgs/: CMakeLists.txt.bak  package.xml.bak
knowrob_tutorials/knowrob_tutorial_msgs/msg/: ObjectDetection.msg
knowrob_tutorials/knowrob_tutorial_msgs/srv/: DetectObject.srv
