<package>
  <name>knowrob_perception_tutorial</name>
  <version>1.0.0</version>
  <description>knowrob_perception_tutorial</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://knowrob.org/doc/writing_an_interface_to_your_perception_system</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob_tutorials/issues</url>

  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>knowrob_common</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>knowrob_common</run_depend>

  <build_depend>knowrob_tutorial_msgs</build_depend>
</package>